--- a/test.html
+++ b/test.html
@@ -142,7 +142,7 @@
 <body>
 
   <!-- ICON OBEN RECHTS -->
-  <img src="icon.png" alt="AdBlocker Icon" class="top-right-icon" width="64" height="64" />
+  <img src="icon.png" alt="AdBlocker Icon" class="top-left-icon" width="64" height="64" />
 
   <div class="container">
 
