--- a/index.html
+++ b/index.html
@@ -10,88 +10,35 @@
 <body>
   <header>
     <h1>Android App Entwicklung</h1>
-    <nav>
-      <ul>
-        <li><a href="#start">Start</a></li>
-        <li><a href="#tutorials">Tutorials</a></li>
-        <li><a href="#tools">Tools</a></li>
-        <li><a href="#ressourcen">Ressourcen</a></li>
-        <li><a href="#kontakt">Kontakt</a></li>
-      </ul>
-    </nav>
   </header>
 
-  <section id="start">
-    <h2>Willkommen bei AndroidDevPro</h2>
-    <p>
-      Willkommen auf <strong>AndroidDevPro</strong> – deinem professionellen Portal für moderne Android App Entwicklung.
-      Egal ob du gerade erst anfängst oder bereits Erfahrung hast – hier findest du hochwertige Inhalte, um deine App-Projekte erfolgreich umzusetzen.
-      Unsere Tutorials, Tools und Ressourcen sind so aufgebaut, dass sie dir helfen, effizienter und sicherer zu entwickeln.
-    </p>
-  </section>
+  <main>
+    <section>
+      <h2>Willkommen auf AndroidDevPro</h2>
+      <p>Hier findest du alles rund um die Entwicklung von Android-Apps – von der Idee bis zur Veröffentlichung im Play Store.</p>
+    </section>
+    <section>
+      <h2>Inhalte dieser Seite</h2>
+      <ul>
+        <li><a href="#">Tutorials für Anfänger & Fortgeschrittene</a></li>
+        <li><a href="#">Kostenlose Entwickler-Tools</a></li>
+        <li><a href="#">Ressourcen, Icons, UI-Kits</a></li>
+        <li><a href="datenschutzerklaerung.html">Datenschutzerklärung</a> & <a href="impressum.html">Impressum</a></li>
+      </ul>
+    </section>
+  </main>
 
-  <section id="tutorials">
-    <h2>Schritt-für-Schritt Tutorials</h2>
-
-    <h3>Anfänger</h3>
-    <ul>
-      <li><strong>Android Studio Installation:</strong> Lerne, wie du Android Studio einrichtest und dein erstes Projekt startest.</li>
-      <li><strong>Hello World App:</strong> Ein einfaches Tutorial, um deine erste App zum Laufen zu bringen.</li>
-      <li><strong>Layouts mit XML & Compose:</strong> Einführung in Benutzeroberflächen mit zwei Methoden.</li>
-      <li><strong>Grundlagen Kotlin:</strong> Was du als Android-Entwickler über Kotlin wissen musst.</li>
-    </ul>
-
-    <h3>Fortgeschritten</h3>
-    <ul>
-      <li><strong>Navigation Component:</strong> Baue moderne Navigationsstrukturen mit Jetpack.</li>
-      <li><strong>Datenbank mit Room:</strong> Einführung in lokale Speicherung und ORM.</li>
-      <li><strong>MVVM Architektur:</strong> Trenne deine App logisch und wartbar.</li>
-    </ul>
-
-    <h3>Monetarisierung</h3>
-    <ul>
-      <li><strong>AdMob Integration:</strong> Banner und Interstitial Ads richtig einbinden.</li>
-      <li><strong>In-App-Käufe:</strong> Einführung in Google Play Billing.</li>
-    </ul>
-
-    <h3>App Veröffentlichen</h3>
-    <ul>
-      <li><strong>APK vs. AAB:</strong> Unterschiede und was Google verlangt.</li>
-      <li><strong>Google Play Store:</strong> Schritt-für-Schritt Anleitung zur App-Veröffentlichung.</li>
-    </ul>
-  </section>
-
-  <section id="tools">
-    <h2>Top Tools für Android Entwickler</h2>
-    <ul>
-      <li><strong>Android Studio:</strong> Die offizielle IDE für Android mit integriertem Emulator.</li>
-      <li><strong>Firebase:</strong> Tools für Authentifizierung, Datenbanken, Crash Reporting und mehr.</li>
-      <li><strong>GitHub:</strong> Versionsverwaltung und Open-Source-Beiträge.</li>
-      <li><strong>Emulatoren:</strong> Teste deine App auf verschiedenen Geräten virtuell.</li>
-      <li><strong>Design Tools:</strong> Nutze Figma oder Material Design Guidelines zur UI-Gestaltung.</li>
-    </ul>
-  </section>
-
-  <section id="ressourcen">
-    <h2>Ressourcen & Tipps</h2>
-    <ul>
-      <li><strong>Clean Code:</strong> Lerne, wie du wartbaren und lesbaren Code schreibst.</li>
-      <li><strong>Best Practices:</strong> Tipps zur Architektur, Performance und Sicherheit.</li>
-      <li><strong>Google Play Richtlinien:</strong> Was du unbedingt beachten musst, um genehmigt zu werden.</li>
-      <li><strong>Checklisten:</strong> Vorbereitung auf das Play Store Review.</li>
-      <li><strong>Open Source Projekte:</strong> Sieh dir reale App-Projekte zum Lernen an.</li>
-    </ul>
-  </section>
-
-  <section id="kontakt">
-    <h2>Kontakt</h2>
-    <p>Du hast Fragen oder möchtest mitmachen? Schreib uns eine E-Mail: <a href="mailto:kontakt@androiddevpro.de">kontakt@androiddevpro.de</a></p>
-    <p>Folge uns auch auf GitHub und bleib auf dem neuesten Stand.</p>
-  </section>
-
-  <footer>
-    <p>© 2025 AndroidDevPro. Alle Rechte vorbehalten.</p>
-    <p><a href="datenschutzerklaerung.html">Datenschutzerklärung</a> | <a href="impressum.html">Impressum</a></p>
-  </footer>
+  <!-- AdSense-Banner unten -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5310734846855331"
+     crossorigin="anonymous"></script>
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-5310734846855331"
+       data-ad-slot="2440550172"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
 </body>
 </html>
